[gd_scene load_steps=13 format=3 uid="uid://xkeq0wjw2t02"]

[ext_resource type="PackedScene" uid="uid://g0gq5qr7iw3h" path="res://scenes/straight_man/straight_man.tscn" id="1_0v7lm"]
[ext_resource type="Script" path="res://scenes/stage/stage.gd" id="1_s2fhp"]
[ext_resource type="Texture2D" uid="uid://sy6t524cyryb" path="res://assets/images/stage.jpg" id="2_efxte"]
[ext_resource type="PackedScene" uid="uid://br1a6d0qms0io" path="res://scenes/funny_man/funny_man.tscn" id="3_crfld"]
[ext_resource type="FontFile" uid="uid://y6goxlj6mldw" path="res://assets/fonts/mika-chan/mikachanALL.ttc" id="3_ta55u"]
[ext_resource type="Texture2D" uid="uid://x5uq1im2kdff" path="res://assets/images/dialog-box.jpg" id="5_waqs7"]
[ext_resource type="AudioStream" uid="uid://bn1vivbqoc8h4" path="res://assets/bgm.mp3" id="7_s58td"]

[sub_resource type="Animation" id="Animation_yrsb5"]
length = 0.001

[sub_resource type="Animation" id="Animation_6tak0"]
resource_name = "bokke_dialog"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dailog-box:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1280, 600), Vector2(0, 600)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"get_bokke_dialog"
}]
}

[sub_resource type="Animation" id="Animation_u3btq"]
resource_name = "play"
length = 2.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TimerLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TimerLabel:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["3", "2", "1
"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Timer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [2],
"method": &"start"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_game"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TimerLabel:theme_override_font_sizes/font_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.9, 1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [750, 0, 750, 0, 750, 0]
}

[sub_resource type="Animation" id="Animation_vc4ed"]
resource_name = "tsukkomi_dialog"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dailog-box:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 4.6, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1280, 600), Vector2(0, 600), Vector2(0, 600), Vector2(1280, 600)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"get_tsukkomi_dialog"
}, {
"args": [],
"method": &"setup"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x88vq"]
_data = {
"RESET": SubResource("Animation_yrsb5"),
"bokke_dialog": SubResource("Animation_6tak0"),
"play": SubResource("Animation_u3btq"),
"tsukkomi_dialog": SubResource("Animation_vc4ed")
}

[node name="stage" type="Node2D"]
script = ExtResource("1_s2fhp")

[node name="Stage" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.784314)
position = Vector2(640, 360)
texture = ExtResource("2_efxte")

[node name="bokke_label" type="Label" parent="Stage"]
offset_left = -418.0
offset_top = -182.0
offset_right = -268.0
offset_bottom = -77.0
theme_override_fonts/font = ExtResource("3_ta55u")
theme_override_font_sizes/font_size = 50
text = "Bokke 
Ready?"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="instruction" type="Label" parent="Stage/bokke_label"]
layout_mode = 0
offset_top = 121.0
offset_right = 135.0
offset_bottom = 152.0
theme_override_fonts/font = ExtResource("3_ta55u")
theme_override_font_sizes/font_size = 30
text = "press 'E'"
horizontal_alignment = 1

[node name="tsukkomi_label" type="Label" parent="Stage"]
offset_left = 237.0
offset_top = -184.0
offset_right = 437.0
offset_bottom = -79.0
theme_override_fonts/font = ExtResource("3_ta55u")
theme_override_font_sizes/font_size = 50
text = "Tsukkomi 
Ready ?"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="instruction" type="Label" parent="Stage/tsukkomi_label"]
layout_mode = 0
offset_left = 3.6666
offset_top = 122.0
offset_right = 198.667
offset_bottom = 153.0
theme_override_fonts/font = ExtResource("3_ta55u")
theme_override_font_sizes/font_size = 30
text = "press 'Enter'"
horizontal_alignment = 1

[node name="straight_man" parent="." instance=ExtResource("1_0v7lm")]
position = Vector2(734, 391)
scale = Vector2(0.75, 0.75)

[node name="funny_man" parent="." instance=ExtResource("3_crfld")]
position = Vector2(521, 391)
scale = Vector2(0.37, 0.37)

[node name="Director" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x88vq")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TimerLabel" type="Label" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(48, 12)
theme_override_fonts/font = ExtResource("3_ta55u")
theme_override_font_sizes/font_size = 750
text = "なんでやねん"
horizontal_alignment = 1
vertical_alignment = 1

[node name="dailog-box" type="Sprite2D" parent="."]
position = Vector2(-1280, 600)
texture = ExtResource("5_waqs7")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1280, 125)

[node name="label" type="Label" parent="dailog-box"]
offset_top = 9.0
offset_right = 1280.0
offset_bottom = 120.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_ta55u")
theme_override_font_sizes/font_size = 30
text = "ウマとシカが二人そろっていたら危険"
horizontal_alignment = 1

[node name="sfx" type="AudioStreamPlayer2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_s58td")
volume_db = -25.0
autoplay = true

[connection signal="animation_finished" from="funny_man" to="." method="_on_funny_man_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
